--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p class="p2" id="p2"></p>
         <button class="bt2" id="bt2">Ingresar</button>
       </section>
-      <script src="/assets/js/script.js"></script>
+      <script src="./assets/js/script.js"></script>
     </div>
   </body>
 </html>
