--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       
        
         <img
-          src="../assets/img/ejercicio1.jpg"
+          src="/assets/img/ejercicio1.jpg"
           alt="super carros"
           id="itemimg"
         />
