--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Condicionales</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
       
        
         <img
-          src="/assets/img/ejercicio1.jpg"
+          src="assets/img/ejercicio1.jpg"
           alt="super carros"
           id="itemimg"
         />
@@ -88,7 +88,7 @@
         <p class="p2" id="p2"></p>
         <button class="bt2" id="bt2">Ingresar</button>
       </section>
-      <script src="/assets/js/script.js"></script>
+      <script src="assets/js/script.js"></script>
     </div>
   </body>
 </html>
